--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <!-- Bootstrap 5.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Vue js -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+
     <!-- Custom style -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>JS Array Carousel with Objects</title>
+    <title>vue carousel</title>
 
 </head>
 <body>
 
-    <main>
+    <main id="app"> 
         <div class="container-fluid p-5">
             <div class="row text-center">
                 <div class="col-12 p-3" id="my-before-carousel">
@@ -41,6 +44,9 @@
                                 <span class="my-prev-hook"></span>
                             </div>
                             <!-- immagini interne -->
+                            <div id= "thumb" style="`width: calc(100% / ${landscape.length})`"  ; >
+                                <img class = "img-fluid pointer sleepy" src="``" alt="random landscape picture">
+                            </div>`;
                             <!-- next -->
                             <div class="my-next position-absolute">
                                 <span class="my-next-hook"></span>
